--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
 beautifulsoup4==4.11.1
-Flask==2.2.3
-nltk==3.8.1
-python-dotenv==1.0.0
-tweepy==4.12.1
+blinker==1.6.2
+Flask==2.3.2
 gunicorn==20.1.0
+itsdangerous==2.1.2 
+Jinja2==3.1.2 
+joblib==1.2.0 
+nltk==3.8.1 
+oauthlib==3.2.2 
+python-dotenv==1.0.0 
+regex==2022.10.31 
+requests==2.28.2 
+requests-oauthlib==1.3.1 
+sklearn==0.0.post1 
+soupsieve==2.3.2.post1 
+tqdm==4.64.1
+tweepy==4.12.1
+Werkzeug==2.3.5 
